--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><title>the ananad</html></head></title>
+<html><head><title>the ananad</head></title>
 <body background="https://telegra.ph/file/307616a021107dea7617b.jpg" text="#FFFFFF" topmargin="70" leftmargin="60">
 	<IMG SRC="https://telegra.ph/file/d4e38d665bd67a7805f73.jpg" HEIGHT="20%" WIDTH="20%" align="right">
 	
@@ -68,4 +68,4 @@ Then I Gotta Begin Boy Kannum Potti Padum<br><br><br>
 This Is That Brown Color Trip Mappila Drip<br>
 Right From The Top Boy Thathalley Jjj<br>
 Why’s That Chain On Your Neck Boy, Khafirra Iji<br>
-Just In Case When U Hit Boy Kattilley Ijj</i><br><br><br></font></CENTER>
+Just In Case When U Hit Boy Kattilley Ijj</i><br><br><br></font></CENTER></body></html>
