--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><title>the ananad</head></title>
-<body background="https://telegra.ph/file/307616a021107dea7617b.jpg" text="#FFFFFF" topmargin="70" leftmargin="60">
+<body background="<a href="https://i.ibb.co/4mkF0L9/SPACE-MAN-WALLPAPER.png" text="#FFFFFF" topmargin="70" leftmargin="60">
 	<IMG SRC="https://telegra.ph/file/d4e38d665bd67a7805f73.jpg" HEIGHT="20%" WIDTH="20%" align="right">
 	
  
