--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><title>the ananad</head></title>
 <body bgcolor="black" text="#FFFFFF" topmargin="70" leftmargin="60">
-	<IMG SRC="https://telegra.ph/file/d4e38d665bd67a7805f73.jpg" HEIGHT="20%" WIDTH="20%" align="right">
+	<IMG SRC="https://i.postimg.cc/csKCNx7Y/SPACE-MAN-WALLPAPER.png" HEIGHT="20%" WIDTH="20%" align="right">
 	
  
 	<font size="8%"><CENTER>
