--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <body background="https://i.postimg.cc/csKCNx7Y/SPACE-MAN-WALLPAPER.png" text="#FFFFFF" topmargin="70" leftmargin="60">
 	<IMG SRC="https://i.postimg.cc/tJ0bqGhH/Malabari-Banger-Lyrics-Dabzee-Joke-RRr-Sa.jpg" HEIGHT="20%" WIDTH="10%" align="right">
 	
- <font bgcolor="yellow"<h1>Malabari Banger </h1>
+ <font color="yellow"<h1>Malabari Banger </h1>
 	<h2>By  JOKER , MHR , SA & Dabzee </h2>
- lyrics by anandabhi</font>
+ <h3>>lyrics by anandabhi</h3></font>
 	<font size="8%"><CENTER></CENTER></font>
 	<i>Boy You’re A Bang Malabari Gang<br>
 MHR Kittipoyi Kambum Chullim Banam<br>
