--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <font color="yellow"<h1>Malabari Banger </h1>
 	<h2>By  JOKER , MHR , SA & Dabzee </h2>
  <h3>>lyrics by anandabhi</h3></font>
-	<font size="8%"><CENTER></CENTER></font>
+	<font size="8%"><CENTER>
 	<i>Boy You’re A Bang Malabari Gang<br>
 MHR Kittipoyi Kambum Chullim Banam<br>
 Vettikooti Kathichitt 5um 10um Mangum<br>
